fix size of search field on mobile

--- a/assets/sass/components/navbar.scss
+++ b/assets/sass/components/navbar.scss
@@ -49,9 +49,13 @@ category: Components - Navbar
     overflow: visible;
   }
   .secondary {
+    text-align: center;
     li {
       display: inline-block;
     }
+  }
+  .form-control {
+    font-size: 16px;
   }
 }
 
